--- a/index.html
+++ b/index.html
@@ -3,11 +3,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lukasz Lukasiewicz Portfolio Website</title>
     <link href="css/reset.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
+    <header>
+        <nav id="navbar">
+            <ul>
+                <li>About me</li>
+                <li>Projects</li>
+                <li>Skills</li>
+                <li>Contact</li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section id="about-me">
+            <h2>About me</h2>
+        </section>
+        <section id="projects">
+            <h2>My projects</h2>
+        </section>
+        <section id="skills">
+            <h2>My skills</h2>
+        </section>
+        <section id="contact">
+            <h2>Contact</h2>
+        </section>
+    </main>
     <h1>Hello world</h1>
 </body>
 </html>
