--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
     <title>Lukasz Lukasiewicz Portfolio Website</title>
     <link href="css/reset.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
+        <h1 id="pageTitle">Łukasz Łukasiewicz Personal Portfolio</h1>
         <nav id="navbar">
             <ul>
                 <li>About me</li>
@@ -32,6 +36,5 @@
             <h2>Contact</h2>
         </section>
     </main>
-    <h1>Hello world</h1>
 </body>
 </html>
