--- a/index.html
+++ b/index.html
@@ -11,30 +11,33 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <h1 id="pageTitle">Łukasz Łukasiewicz Personal Portfolio</h1>
-        <nav id="navbar">
-            <ul>
-                <li>About me</li>
-                <li>Projects</li>
-                <li>Skills</li>
-                <li>Contact</li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section id="about-me">
-            <h2>About me</h2>
-        </section>
-        <section id="projects">
-            <h2>My projects</h2>
-        </section>
-        <section id="skills">
-            <h2>My skills</h2>
-        </section>
-        <section id="contact">
-            <h2>Contact</h2>
-        </section>
+    <main class="grid-container">
+        <header>
+            <h1 id="pageTitle">Łukasz Łukasiewicz Personal Portfolio</h1>
+            <nav id="navbar">
+                <ul>
+                    <li>About me</li>
+                    <li>Projects</li>
+                    <li>Skills</li>
+                    <li>Contact</li>
+                </ul>
+            </nav>
+        </header>
+            <section id="about-me">
+                <h2>About me</h2>
+            </section>
+            <section id="photoOfMe">
+                
+            </section>
+            <section id="projects">
+                <h2>My projects</h2>
+            </section>
+            <section id="skills">
+                <h2>My skills</h2>
+            </section>
+            <section id="contact">
+                <h2>Contact</h2>
+            </section>
     </main>
 </body>
 </html>
