--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 </head>
 <body>
     <main class="grid-container">
-        <header>
-            <h1 id="pageTitle">Łukasz Łukasiewicz Personal Portfolio</h1>
+        <header id="pageTitle">
+            <h1 >Łukasz Łukasiewicz Personal Portfolio</h1>
+        </header>
             <nav id="navbar">
                 <ul>
                     <li>About me</li>
@@ -22,13 +23,13 @@
                     <li>Contact</li>
                 </ul>
             </nav>
-        </header>
             <section id="about-me">
                 <h2>About me</h2>
             </section>
-            <section id="photoOfMe">
-                
-            </section>
+            <figure id="photoOfMe">
+                <img src="res/lukas.jpeg" alt="photo of me">
+                <figcaption>Photo of me</figcaption>
+            </figure>
             <section id="projects">
                 <h2>My projects</h2>
             </section>
