css, html works

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <body>
     <main class="grid-container">
         <header id="pageTitle">
-            <h1 >Łukasz Łukasiewicz Personal Portfolio</h1>
+            <h1 >Łukasz Łukasiewicz <br/>
+                Personal Portfolio</h1>
         </header>
             <nav id="navbar">
                 <ul>
@@ -25,6 +26,14 @@
             </nav>
             <section id="about-me">
                 <h2>About me</h2>
+                <article>
+                    Professional with solid experience in project management in various areas (software implementation, software development, self service solutions, vending machines, APMs - Parcel lockers), product development and customer relationship development. 
+                    <br/><br/>
+                    Relevant Knowledge, Skills and Training:
+                    Project Management • Scrum • Prince 2 • Business Development • Product Development • Team Management • Software Development • Extereme Ownership Approach • BJJ • HTML• CSS • JavaScript
+                    <br/><br/>
+                    #0445Club #0445ClubPoland
+                </article>
             </section>
             <figure id="photoOfMe">
                 <img src="res/lukas.jpeg" alt="photo of me">
