css, html works

--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <main class="grid-container">
-        <header id="pageTitle">
-            <h1 >Łukasz Łukasiewicz <br/>
-                Personal Portfolio</h1>
-        </header>
+    
+        <header>
+            <div id="pageTitle"><h1>Łukasz Łukasiewicz Personal Portfolio</h1></div>
             <nav id="navbar">
                 <ul>
                     <li>About me</li>
@@ -24,6 +22,8 @@
                     <li>Contact</li>
                 </ul>
             </nav>
+        </header>
+        <main class="grid-container">
             <section id="about-me">
                 <h2>About me</h2>
                 <article>
@@ -36,7 +36,7 @@
                 </article>
             </section>
             <figure id="photoOfMe">
-                <img src="res/lukas.jpeg" alt="photo of me">
+                <img src="res/lukas2.jpeg" alt="photo of me">
                 <figcaption>Photo of me</figcaption>
             </figure>
             <section id="projects">
