--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </article>
             </section>
             <figure id="photoOfMe">
-                <img src="res/lukas2.jpeg" alt="photo of me">
+                <img src="res/lukas2.jpg" alt="photo of me">
                 <figcaption>Photo of me</figcaption>
             </figure>
             <section id="projects">
