change of header for flex

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 <body>
     
         <header>
+            <div id="lukas">
+                <img src="res/lukas2.jpg" alt="photo of me">
+            </div>
+            <div id="headerbar">
             <div id="pageTitle"><h1>Łukasz Łukasiewicz Personal Portfolio</h1></div>
             <nav id="navbar">
                 <ul>
@@ -22,6 +26,7 @@
                     <li>Contact</li>
                 </ul>
             </nav>
+            </div>
         </header>
         <main class="grid-container">
             <section id="about-me">
@@ -35,10 +40,6 @@
                     #0445Club #0445ClubPoland
                 </article>
             </section>
-            <figure id="photoOfMe">
-                <img src="res/lukas2.jpg" alt="photo of me">
-                <figcaption>Photo of me</figcaption>
-            </figure>
             <section id="projects">
                 <h2>My projects</h2>
             </section>
