new approach, flex container

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <img src="res/lukas2.jpg" alt="photo of me">
             </div>
             <div id="headerbar">
-            <div id="pageTitle"><h1>Łukasz Łukasiewicz Personal Portfolio</h1></div>
+            <div id="pageTitle"><h1>Łukasz Łukasiewicz Personal Website</h1></div>
             <nav id="navbar">
                 <ul>
                     <li>About me</li>
@@ -28,9 +28,9 @@
             </nav>
             </div>
         </header>
-        <main class="grid-container">
+        <main class="flex-container">
             <section id="about-me">
-                <h2>About me</h2>
+                <h2 class="section-title">About me</h2>
                 <article>
                     Professional with solid experience in project management in various areas (software implementation, software development, self service solutions, vending machines, APMs - Parcel lockers), product development and customer relationship development. 
                     <br/><br/>
@@ -41,13 +41,13 @@
                 </article>
             </section>
             <section id="projects">
-                <h2>My projects</h2>
+                <h2 class="section-title">My projects</h2>
             </section>
             <section id="skills">
-                <h2>My skills</h2>
+                <h2 class="section-title">My skills</h2>
             </section>
             <section id="contact">
-                <h2>Contact</h2>
+                <h2 class="section-title">Contact</h2>
             </section>
     </main>
 </body>
