html and css works

--- a/index.html
+++ b/index.html
@@ -20,34 +20,29 @@
             <div id="pageTitle"><h1>Łukasz Łukasiewicz Personal Website</h1></div>
             <nav id="navbar">
                 <ul>
-                    <li>About me</li>
-                    <li>Projects</li>
-                    <li>Skills</li>
-                    <li>Contact</li>
+                    <li>Long story short</li>
+                    <li>Special powers</li>
+                    <li>A few accomplishments</li>
+                    <li>How to reach me</li>
                 </ul>
             </nav>
             </div>
         </header>
         
             <section id="about-me">
-                <h2 class="section-title">About me</h2>
+                <h2 class="section-title">Long story short</h2>
                 <article>
-                    Professional with solid experience in project management in various areas (software implementation, software development, self service solutions, vending machines, APMs - Parcel lockers), product development and customer relationship development. 
-                    <br/><br/>
-                    Relevant Knowledge, Skills and Training:
-                    Project Management • Scrum • Prince 2 • Business Development • Product Development • Team Management • Software Development • Extereme Ownership Approach • BJJ • HTML• CSS • JavaScript
-                    <br/><br/>
-                    #0445Club #0445ClubPoland
+                    Husband, Father of 3, stubborn as an ox
                 </article>
             </section>
             <section id="projects">
-                <h2 class="section-title">My projects</h2>
+                <h2 class="section-title">Special powers</h2>
             </section>
             <section id="skills">
-                <h2 class="section-title">My skills</h2>
+                <h2 class="section-title">A few accomplishments</h2>
             </section>
             <section id="contact">
-                <h2 class="section-title">Contact</h2>
+                <h2 class="section-title">How to reach me</h2>
             </section>
     </main>
 </body>
