links  in navbar added

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             <div id="pageTitle"><h1>Łukasz Łukasiewicz Personal Website</h1></div>
             <nav id="navbar">
                 <ul>
-                    <li>Long story short</li>
-                    <li>Special powers</li>
-                    <li>A few accomplishments</li>
-                    <li>How to reach me</li>
+                    <li><a href="#about-me">Long story short</a></li>
+                    <li><a href="#skills">Special powers</a></li>
+                    <li><a href="#projects">A few accomplishments</a></li>
+                    <li><a href="#contact">How to reach me</a></li>
                 </ul>
             </nav>
             </div>
@@ -35,10 +35,10 @@
                     Husband, Father of 3, stubborn as an ox
                 </article>
             </section>
-            <section id="projects">
+            <section id="skills">
                 <h2 class="section-title">Special powers</h2>
             </section>
-            <section id="skills">
+            <section id="projects">
                 <h2 class="section-title">A few accomplishments</h2>
             </section>
             <section id="contact">
