dodane ikony umiejętnosci

--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
             </section>
             <section id="skills">
                 <h2 class="section-title">Special powers</h2>
+                <div id="listOfSkills">
+                <img src="res/html5.png" alt="HTML 5">
+                <img src="res/css.png" alt="CSS">
+                <img src="res/BJJ_Blue_Belt.png" alt="BJJ">
+                <img src="res/js.png" alt="js">
+                </div>
             </section>
             <section id="projects">
                 <h2 class="section-title">A few accomplishments</h2>
